--- a/khitma/src/index.html
+++ b/khitma/src/index.html
@@ -15,7 +15,7 @@
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-5LT07C165Z');
+    gtag('config', 'G-QXJ6QZFWZL');
   </script>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
