--- a/khitma/src/index.html
+++ b/khitma/src/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <title>ختمة.نت</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
