--- a/khitma/src/index.html
+++ b/khitma/src/index.html
@@ -2,13 +2,117 @@
 <html lang="ar" dir="rtl">
 
 <head>
-  <meta charset="utf-8">
+  <!-- <meta charset="utf-8">
   <title>ختمة.نت</title>
-  <base href="/">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
+ -->
+
+
+  <base href="/">
+
+
+  <!-- Must -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+
+
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /> -->
+
+  <meta name="description"
+    content="ختمة.نت هو تطبيق يتيح  قراءة وختم القرآن الكريم بشكل جماعي، وذلك عن طريق إنشاء مجموعات لختم القرآن وتوزيع أجزاء المصحف على الأعضاء بطريقة سلسلة، ثمّ متابعة تقدّم الختمة بشكل مريح ومتاح لجميع المشتركين في مجموعتك.">
+  <meta name="keywords" content="قران , تلاوة , ختمة">
+  <title>ختمة.نت</title>
+
+  <!-- Android  -->
+  <meta name="theme-color" content="#1c6151">
+  <meta name="mobile-web-app-capable" content="yes">
+
+  <!-- iOS -->
+  <meta name="apple-mobile-web-app-title" content="ختمة.نت">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
+  <!-- Windows  -->
+  <meta name="msapplication-navbutton-color" content="#1c6151">
+  <meta name="msapplication-TileColor" content="#1c6151">
+  <meta name="msapplication-TileImage" content="assets/icons/favicon-144x144.png">
+  <meta name="msapplication-config" content="browserconfig.xml">
+
+  <!-- Pinned Sites  -->
+  <meta name="application-name" content="ختمة.نت">
+  <meta name="msapplication-tooltip" content="Tooltip Text">
+  <meta name="msapplication-starturl" content="/">
+
+  <!-- Tap highlighting  -->
+  <meta name="msapplication-tap-highlight" content="no">
+
+  <!-- UC Mobile Browser  -->
+  <meta name="full-screen" content="yes">
+  <meta name="browsermode" content="application">
+
+  <!-- Disable night mode for this page  -->
+  <meta name="nightmode" content="disable">
+
+  <!-- Fitscreen  -->
+  <!-- <meta name="viewport" content="uc-fitscreen=yes" /> -->
+
+  <!-- Layout mode -->
+  <meta name="layoutmode" content="fitscreen/standard">
+
+  <!-- imagemode - show image even in text only mode  -->
+  <meta name="imagemode" content="force">
+
+  <!-- Orientation  -->
+  <meta name="screen-orientation" content="portrait">
+
+
+
+  <!-- Main Link Tags  -->
+  <link href="assets/icons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
+  <link href="assets/icons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+  <link href="assets/icons/favicon-48x48.png" rel="icon" type="image/png" sizes="48x48">
+
+  <!-- iOS  -->
+  <link href="assets/icons/maskable_icon.png" rel="apple-touch-icon">
+  <!-- <link href="touch-icon-ipad.png" rel="apple-touch-icon" sizes="76x76">
+  <link href="touch-icon-iphone-retina.png" rel="apple-touch-icon" sizes="120x120">
+  <link href="touch-icon-ipad-retina.png" rel="apple-touch-icon" sizes="152x152"> -->
+
+  <!-- Startup Image  -->
+  <link href="assets/khitma-logo.png" rel="apple-touch-startup-image">
+
+  <!-- Pinned Tab  -->
+  <link href="assets/khitma-logo.png" rel="mask-icon" size="any" color="red">
+
+  <!-- Android  -->
+  <link href="assets/icons/maskable_icon_x192.png" rel="icon" sizes="192x192">
+  <link href="assets/icons/maskable_icon_x128.png" rel="icon" sizes="128x128">
+
+  <!-- Others -->
+  <link href="assets/icons/favicon.icon" rel="shortcut icon" type="image/x-icon">
+
+  <!-- UC Browser  -->
+  <!-- <link href="images/icon-52x52.png" rel="apple-touch-icon-precomposed" sizes="57x57">
+  <link href="images/icon-72x72.png" rel="apple-touch-icon" sizes="72x72"> -->
+
+  <!-- Manifest.json  -->
+  <link rel="manifest" href="manifest.webmanifest">
+
+
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <meta name="theme-color" content="#1c6151">
+
+
+
+
+
+
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-5LT07C165Z"></script>
@@ -20,11 +124,7 @@
     gtag('config', 'G-QXJ6QZFWZL');
   </script>
 
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+
 </head>
 
 <body class="mat-typography">
