additional tags + link preview

--- a/khitma/src/index.html
+++ b/khitma/src/index.html
@@ -110,7 +110,21 @@
 
 
 
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://khitma.net">
+  <meta property="og:title" content="ختمة.نت">
+  <meta property="og:description"
+    content="ختمة.نت هو تطبيق يتيح  قراءة وختم القرآن الكريم بشكل جماعي، وذلك عن طريق إنشاء مجموعات لختم القرآن وتوزيع أجزاء المصحف على الأعضاء بطريقة سلسلة، ثمّ متابعة تقدّم الختمة بشكل مريح ومتاح لجميع المشتركين في مجموعتك.">
+  <meta property="og:image" content="assets/link-preview.png">
 
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://khitma.net">
+  <meta property="twitter:title" content="ختمة.نت">
+  <meta property="twitter:description"
+    content="ختمة.نت هو تطبيق يتيح  قراءة وختم القرآن الكريم بشكل جماعي، وذلك عن طريق إنشاء مجموعات لختم القرآن وتوزيع أجزاء المصحف على الأعضاء بطريقة سلسلة، ثمّ متابعة تقدّم الختمة بشكل مريح ومتاح لجميع المشتركين في مجموعتك.">
+  <meta property="twitter:image" content="assets/link-preview.png">
 
 
 
